--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,6 @@
 $bad-color: red;
-$gold-color: green;
+$good-color: green;
 $neutral-color: lightgray;
+
+
+$box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
