--- a/styles/main.css
+++ b/styles/main.css
@@ -3,9 +3,14 @@
   width: 30%;
   margin: 1%;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-  background-color: lightgray;
-  color: black;
+  background-color: #AAA239;
+  color: #AA8439;
   text-align: center; }
+  .card .card-description, .card-bad .card-description, .card-good .card-description {
+    max-width: 200 px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; }
   .card .card-img, .card-bad .card-img, .card-good .card-img {
     position: relative; }
     .card .card-img img, .card-bad .card-img img, .card-good .card-img img {
@@ -19,12 +24,12 @@
       width: 100%; }
 
 .card-bad {
-  background-color: red;
-  color: white; }
+  background-color: #4E2C73;
+  color: #226666; }
 
 .card-good {
-  background-color: green;
-  color: white; }
+  background-color: #8CA336;
+  color: #226666; }
 
 .card-holder {
   display: flex;
